# ptl

./: LICENSE  README
cpp/patterns/CRTP/: main.cpp
cpp/patterns/GoF/abstract_factory/: build.sh  main.cpp
cpp/patterns/GoF/adapter/: main.cpp
cpp/patterns/GoF/bridge/: main.cpp
cpp/patterns/GoF/builder/: main.cpp
cpp/patterns/GoF/chain_of_responsability/: main.cpp
cpp/patterns/GoF/command/: main.cpp
cpp/patterns/GoF/composite/: main.cpp
cpp/patterns/GoF/decorator/: main.cpp
cpp/patterns/GoF/facade/: main.cpp
cpp/patterns/GoF/factory_method/: main.cpp
cpp/patterns/GoF/flyweight/: main.cpp
cpp/patterns/GoF/interpreter/: main.cpp
cpp/patterns/GoF/iterator/: main.cpp
cpp/patterns/GoF/mediator/: main.cpp
cpp/patterns/GoF/memento/: main.cpp
cpp/patterns/GoF/observer/: main.cpp
cpp/patterns/GoF/prototype/: main.cpp
cpp/patterns/GoF/proxy/: main.cpp
cpp/patterns/GoF/singleton/: main.cpp
cpp/patterns/GoF/state/: main.cpp
cpp/patterns/GoF/strategy/: main.cpp
cpp/patterns/GoF/template_method/: main.cpp
cpp/patterns/GoF/visitor/: README.md  build.sh  elt_1.cpp  elt_1.hpp  elt_2.cpp  elt_2.hpp  elt_3.cpp  elt_3.hpp  main.cpp  visited_base.cpp  visited_base.hpp  visitor_1.cpp  visitor_1.hpp  visitor_2.cpp  visitor_2.hpp
cpp/patterns/misc/CRTP/: main.cpp
cpp/patterns/visitor/: action_1.cpp  action_1.hpp  build.sh  elt_1.cpp  elt_1.hpp  elt_2.cpp  elt_2.hpp  elt_3.cpp  elt_3.hpp  elt_base.cpp  elt_base.hpp  main.cpp  test  visited_base.cpp  visited_base.hpp  visitor_1.cpp  visitor_2.cpp  visitor_2.hpp
cpp/program/fhs/: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt.a_integrer  COPYING  INSTALL  clean.sh
cpp/program/fhs/include/: class.hpp
cpp/program/fhs/project/: CMakeLists.txt
cpp/program/fhs/src/: class.cpp  class.cxx  class.hxx  license.cxx  main.cpp  version.hpp.in
cpp/project/: CMakeLists.txt
python/: TODELETE
rust/program/: Cargo.toml
tools/: README
